// Client authentication protocol
syntax = "proto3";
package xmtp.message_api.v1;

import "message_contents/public_key.proto";
import "message_contents/signature.proto";

option go_package = "github.com/xmtp/proto/v3/go/message_api/v1";
option java_package = "org.xmtp.proto.message.api.v1";

// Token is used by clients to prove to the nodes
// that they are serving a specific wallet.
message Token {
    // identity key signed by a wallet
    xmtp.message_contents.PublicKey identity_key = 1; 
    // encoded bytes of AuthData
    bytes auth_data_bytes = 2;
    // identity key signature of AuthData bytes
    xmtp.message_contents.Signature auth_data_signature = 3; 
}

// AuthData carries token parameters that are authenticated
// by the identity key signature.
// It is embedded in the Token structure as bytes
// so that the bytes don't need to be reconstructed
// to verify the token signature.
message AuthData {
    // address of the wallet
    string wallet_addr = 1;
    // time when the token was generated/signed 
    uint64 created_ns = 2; 
}
